Use the Java 9 collection factories
Bug: Not applicable
Test: PhysicalDeviceTableModelTest
Change-Id: Ied7b0b98d73d8832e4e8244031ead95b4a5a3f74

GitOrigin-RevId: 3b1717e5976a22eca8826a66843a40b807d8be93