@@ -19,10 +19,9 @@ import static org.junit.Assert.assertEquals;
 
 import com.android.sdklib.AndroidVersion;
 import com.android.tools.idea.testing.swing.TableModelEventArgumentMatcher;
-import com.google.common.collect.Lists;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
+import java.util.Set;
 import javax.swing.event.TableModelEvent;
 import javax.swing.event.TableModelListener;
 import javax.swing.table.TableModel;
@@ -40,19 +39,19 @@ public final class PhysicalDeviceTableModelTest {
     PhysicalDeviceTableModel model = new PhysicalDeviceTableModel();
 
     // Assert
-    assertEquals(Collections.emptyList(), model.getCombinedDevices());
+    assertEquals(List.of(), model.getCombinedDevices());
   }
 
   @Test
   public void newPhysicalDeviceTableModelDevicesIsntEmpty() {
     // Arrange
-    List<PhysicalDevice> devices = Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5);
+    Collection<PhysicalDevice> devices = List.of(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5);
 
     // Act
     PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(devices);
 
     // Assert
-    assertEquals(Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5), model.getCombinedDevices());
+    assertEquals(devices, model.getCombinedDevices());
   }
 
   @Test
@@ -63,7 +62,7 @@ public final class PhysicalDeviceTableModelTest {
     PhysicalDeviceTableModel model = new PhysicalDeviceTableModel();
     model.addTableModelListener(listener);
 
-    List<PhysicalDevice> devices = Collections.singletonList(TestPhysicalDevices.GOOGLE_PIXEL_3);
+    List<PhysicalDevice> devices = List.of(TestPhysicalDevices.GOOGLE_PIXEL_3);
 
     // Act
     model.setDevices(devices);
@@ -80,14 +79,14 @@ public final class PhysicalDeviceTableModelTest {
     // Arrange
     TableModelListener listener = Mockito.mock(TableModelListener.class);
 
-    PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(Lists.newArrayList(TestPhysicalDevices.GOOGLE_PIXEL_3));
+    PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3));
     model.addTableModelListener(listener);
 
     // Act
     model.addOrSet(TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5);
 
     // Assert
-    assertEquals(Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5), model.getCombinedDevices());
+    assertEquals(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5), model.getCombinedDevices());
     Mockito.verify(listener).tableChanged(ArgumentMatchers.argThat(new TableModelEventArgumentMatcher(new TableModelEvent(model))));
   }
 
@@ -95,7 +94,7 @@ public final class PhysicalDeviceTableModelTest {
   public void addOrSetModelRowIndexDoesntEqualNegativeOne() {
     // Arrange
     TableModelListener listener = Mockito.mock(TableModelListener.class);
-    List<PhysicalDevice> devices = Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.GOOGLE_PIXEL_5);
+    Collection<PhysicalDevice> devices = List.of(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.GOOGLE_PIXEL_5);
 
     PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(devices);
     model.addTableModelListener(listener);
@@ -104,7 +103,7 @@ public final class PhysicalDeviceTableModelTest {
     model.addOrSet(TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5);
 
     // Assert
-    assertEquals(Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5), model.getCombinedDevices());
+    assertEquals(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5), model.getCombinedDevices());
     Mockito.verify(listener).tableChanged(ArgumentMatchers.argThat(new TableModelEventArgumentMatcher(new TableModelEvent(model))));
   }
 
@@ -113,14 +112,14 @@ public final class PhysicalDeviceTableModelTest {
     // Arrange
     TableModelListener listener = Mockito.mock(TableModelListener.class);
 
-    PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(Lists.newArrayList(TestPhysicalDevices.GOOGLE_PIXEL_3));
+    PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3));
     model.addTableModelListener(listener);
 
     // Act
     model.remove(TestPhysicalDevices.GOOGLE_PIXEL_3_KEY);
 
     // Assert
-    Object devices = Collections.emptyList();
+    Object devices = List.of();
 
     assertEquals(devices, model.getDevices());
     assertEquals(devices, model.getCombinedDevices());
@@ -138,13 +137,13 @@ public final class PhysicalDeviceTableModelTest {
       .setAndroidVersion(new AndroidVersion(31))
       .build();
 
-    List<PhysicalDevice> devices = Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_3, domainNameGooglePixel3);
+    Collection<PhysicalDevice> devices = List.of(TestPhysicalDevices.GOOGLE_PIXEL_3, domainNameGooglePixel3);
 
     // Act
     PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(devices);
 
     // Assert
-    assertEquals(Collections.singletonList(TestPhysicalDevices.GOOGLE_PIXEL_3), model.getCombinedDevices());
+    assertEquals(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3), model.getCombinedDevices());
   }
 
   @Test
@@ -157,19 +156,19 @@ public final class PhysicalDeviceTableModelTest {
       .setAndroidVersion(new AndroidVersion(31))
       .build();
 
-    List<PhysicalDevice> devices = Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_5, domainNameGooglePixel3);
+    Collection<PhysicalDevice> devices = List.of(TestPhysicalDevices.GOOGLE_PIXEL_5, domainNameGooglePixel3);
 
     // Act
     PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(devices);
 
     // Assert
-    assertEquals(Arrays.asList(domainNameGooglePixel3, TestPhysicalDevices.GOOGLE_PIXEL_5), model.getCombinedDevices());
+    assertEquals(List.of(domainNameGooglePixel3, TestPhysicalDevices.GOOGLE_PIXEL_5), model.getCombinedDevices());
   }
 
   @Test
   public void getRowCount() {
     // Arrange
-    TableModel model = new PhysicalDeviceTableModel(Collections.singletonList(TestPhysicalDevices.GOOGLE_PIXEL_3));
+    TableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3));
 
     // Act
     int count = model.getRowCount();
@@ -181,7 +180,7 @@ public final class PhysicalDeviceTableModelTest {
   @Test
   public void getValueAtDeviceModelColumnIndex() {
     // Arrange
-    TableModel model = new PhysicalDeviceTableModel(Collections.singletonList(TestPhysicalDevices.GOOGLE_PIXEL_3));
+    TableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3));
 
     // Act
     Object value = model.getValueAt(0, PhysicalDeviceTableModel.DEVICE_MODEL_COLUMN_INDEX);
@@ -193,7 +192,7 @@ public final class PhysicalDeviceTableModelTest {
   @Test
   public void getValueAtApiModelColumnIndex() {
     // Arrange
-    TableModel model = new PhysicalDeviceTableModel(Collections.singletonList(TestPhysicalDevices.GOOGLE_PIXEL_3));
+    TableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3));
 
     // Act
     Object value = model.getValueAt(0, PhysicalDeviceTableModel.API_MODEL_COLUMN_INDEX);
@@ -205,12 +204,12 @@ public final class PhysicalDeviceTableModelTest {
   @Test
   public void getValueAtTypeModelColumnIndex() {
     // Arrange
-    TableModel model = new PhysicalDeviceTableModel(Collections.singletonList(TestPhysicalDevices.GOOGLE_PIXEL_3));
+    TableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3));
 
     // Act
     Object value = model.getValueAt(0, PhysicalDeviceTableModel.TYPE_MODEL_COLUMN_INDEX);
 
     // Assert
-    assertEquals(Collections.EMPTY_SET, value);
+    assertEquals(Set.of(), value);
   }
 }
